--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,4 +1,4 @@
-<h1>About1</h1>
+<h1>About</h1>
 <p>cmsite: wcms use <a href="https://github.com/mdecycu/cmsimde">https://github.com/mdecycu/cmsimde</a> as submodule</p>
 <h1>cp2022</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
@@ -291,15 +291,11 @@ doc["threejsblock"].bind("click", threejsblock.do)
 </div>
 <h1>HW</h1>
 <h2>W5</h2>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/24ecb602ced95eb9ae37727bc4d344c7/raw/505eab3427dec430429eb369baa04e90fd697975/%25E5%25AF%2586%25E7%25A2%25BC%25E4%25BA%2582%25E6%2595%25B8.py">密碼亂數</a></p>
-<h2>W6</h2>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/24ecb602ced95eb9ae37727bc4d344c7/raw/41f787ed4f93b48eac3c187828ad9fef21112ce2/radom_draw_1b.py&amp;src2=https://gist.githubusercontent.com/41123234/24ecb602ced95eb9ae37727bc4d344c7/raw/41f787ed4f93b48eac3c187828ad9fef21112ce2/list_1b_static_site.py">抽點</a></p>
-<h2>W10</h2>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/0ab749c053d13c1eafd3cdde84b0e9e5/raw/fb31c3f1d36cb01615efa7a52b29e91b8418d9ea/%25E8%2580%2583%25E8%25A9%25A6%25E8%25AA%25BF%25E6%259F%25A5.py">考試調查</a></p>
-<h2>W11</h2>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/72aaf05ab1bf5c5042918401e9af5672/raw/74c7d2662d3e0d29b368272dc15bd530447af005/%25E8%2580%2583%25E8%25A9%25A6%25E8%25AA%25BF%25E6%259F%25A5.py">考試結果</a></p>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/975521178e9628269439581fd4a06a62/raw/eb33945cf06cfde4f1cf419e9f85cf720a8023fe/%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p>
-<h2>W12</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4a6115d8a722d725aff5f5140cb63e6e/raw/a7ac9f34e3444e6096e3d1f8a5a16c09755d4a2b/w5%2520random.py">密碼亂數</a></p><h2>W6</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?srcc=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/1.py&amp;src2=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/2.py">抽點</a></p><h2>W10</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/7991582e7578afb4e2a4277a90438594/raw/468c06c08de505fefb60b144ec125ba26c6a27ee/w10%25E4%25BD%259C%25E6%25A5%25AD.py">考試調查</a></p><h2>W11</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/w11%25E4%25BD%259C%25E6%25A5%25AD.py">考試結果</a></p>
+<p><a href="/get_page/W11/\https:/mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/W11%2520%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p><h2>W12</h2>
 <h3>w12-1</h3>
 <!-- 
 在動態網站頁面中啟用 Brython 執行環境的用法, 請注意動態網站執行所在路徑
