--- a/content/W11.html
+++ b/content/W11.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>CMSimfly </h1>
+                <h1>Zkamsmsmdmdm</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">CMSimfly </a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Zkamsmsmdmdm</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,9 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>W11</h1>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/72aaf05ab1bf5c5042918401e9af5672/raw/74c7d2662d3e0d29b368272dc15bd530447af005/%25E8%2580%2583%25E8%25A9%25A6%25E8%25AA%25BF%25E6%259F%25A5.py">考試結果</a></p>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/975521178e9628269439581fd4a06a62/raw/eb33945cf06cfde4f1cf419e9f85cf720a8023fe/%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p>
-<br />W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/w11%25E4%25BD%259C%25E6%25A5%25AD.py">考試結果</a></p>
+<p><a href="/get_page/W11/\https:/mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/W11%2520%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p><br />W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
         
     <!-- footer -->
       <div class="container">
