--- a/content/W13.html
+++ b/content/W13.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>CMSimfly </h1>
+                <h1>Zkamsmsmdmdm</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">CMSimfly </a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Zkamsmsmdmdm</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,9 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12-3 << <a href='w12-3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>W13</h1>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/e22f56deed07feec1753d73392a96cae/raw/49d67d387ebf6bcaac7752b5e1103d806f0e2122/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex1.py">w13溫度轉換ex1</a></p>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/e22f56deed07feec1753d73392a96cae/raw/49d67d387ebf6bcaac7752b5e1103d806f0e2122/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex2.py" title="w13溫度轉換ex2">w13溫度轉換ex2</a></p>
-<br />w12-3 << <a href='w12-3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex1.py">w13溫度轉換ex1</a></p>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex2.py" title="w13溫度轉換ex2">w13溫度轉換ex2</a></p><br />w12-3 << <a href='w12-3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
