--- a/content/W10.html
+++ b/content/W10.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>CMSimfly </h1>
+                <h1>Zkamsmsmdmdm</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">CMSimfly </a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Zkamsmsmdmdm</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,8 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W6 << <a href='W6.html'>Previous</a> <a href='W11.html'>Next</a> >> W11<br /><h1>W10</h1>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/0ab749c053d13c1eafd3cdde84b0e9e5/raw/fb31c3f1d36cb01615efa7a52b29e91b8418d9ea/%25E8%2580%2583%25E8%25A9%25A6%25E8%25AA%25BF%25E6%259F%25A5.py">考試調查</a></p>
-<br />W6 << <a href='W6.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/7991582e7578afb4e2a4277a90438594/raw/468c06c08de505fefb60b144ec125ba26c6a27ee/w10%25E4%25BD%259C%25E6%25A5%25AD.py">考試調查</a></p><br />W6 << <a href='W6.html'>Previous</a> <a href='W11.html'>Next</a> >> W11</div>
         
     <!-- footer -->
       <div class="container">
