--- a/content/W5.html
+++ b/content/W5.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>CMSimfly </h1>
+                <h1>Zkamsmsmdmdm</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">CMSimfly </a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Zkamsmsmdmdm</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,8 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>W5</h1>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/24ecb602ced95eb9ae37727bc4d344c7/raw/505eab3427dec430429eb369baa04e90fd697975/%25E5%25AF%2586%25E7%25A2%25BC%25E4%25BA%2582%25E6%2595%25B8.py">密碼亂數</a></p>
-<br />HW << <a href='HW.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4a6115d8a722d725aff5f5140cb63e6e/raw/a7ac9f34e3444e6096e3d1f8a5a16c09755d4a2b/w5%2520random.py">密碼亂數</a></p><br />HW << <a href='HW.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
