--- a/content/W6.html
+++ b/content/W6.html
@@ -110,14 +110,14 @@ img.add_border {
             <header class="site-navbar py-4 bg-white" role="banner">
               <div class="container">
                 <div class="row align-items-center">
-                <h1>CMSimfly </h1>
+                <h1>Zkamsmsmdmdm</h1>
                 <div class="pl-4">
                     <form>
                     <input type="text" placeholder="Search" name="q" id="tipue_search_input" pattern=".{2,}" title="At least 2 characters" required>
                     </form>
                 </div>
                   <!-- <div class="col-11 col-xl-2">
-                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">CMSimfly </a></h1> 
+                    <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">Zkamsmsmdmdm</a></h1> 
                   </div>
                   -->
                   <div class="col-12 col-md-10 d-none d-xl-block">
@@ -142,8 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W10.html'>Next</a> >> W10<br /><h1>W6</h1>
-<p><a href="https://mdecp2022.github.io/site-41123234/content/cp2022.html?src=https://gist.githubusercontent.com/41123234/24ecb602ced95eb9ae37727bc4d344c7/raw/41f787ed4f93b48eac3c187828ad9fef21112ce2/radom_draw_1b.py&amp;src2=https://gist.githubusercontent.com/41123234/24ecb602ced95eb9ae37727bc4d344c7/raw/41f787ed4f93b48eac3c187828ad9fef21112ce2/list_1b_static_site.py">抽點</a></p>
-<br />W5 << <a href='W5.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?srcc=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/1.py&amp;src2=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/2.py">抽點</a></p><br />W5 << <a href='W5.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
         
     <!-- footer -->
       <div class="container">
