--- a/config/content.htm
+++ b/config/content.htm
@@ -291,11 +291,15 @@ doc["threejsblock"].bind("click", threejsblock.do)
 </div>
 <h1>HW</h1>
 <h2>W5</h2>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4a6115d8a722d725aff5f5140cb63e6e/raw/a7ac9f34e3444e6096e3d1f8a5a16c09755d4a2b/w5%2520random.py">密碼亂數</a></p><h2>W6</h2>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?srcc=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/1.py&amp;src2=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/2.py">抽點</a></p><h2>W10</h2>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/7991582e7578afb4e2a4277a90438594/raw/468c06c08de505fefb60b144ec125ba26c6a27ee/w10%25E4%25BD%259C%25E6%25A5%25AD.py">考試調查</a></p><h2>W11</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4a6115d8a722d725aff5f5140cb63e6e/raw/a7ac9f34e3444e6096e3d1f8a5a16c09755d4a2b/w5%2520random.py">密碼亂數</a></p>
+<h2>W6</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?srcc=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/1.py&amp;src2=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/2.py">抽點</a></p>
+<h2>W10</h2>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/7991582e7578afb4e2a4277a90438594/raw/468c06c08de505fefb60b144ec125ba26c6a27ee/w10%25E4%25BD%259C%25E6%25A5%25AD.py">考試調查</a></p>
+<h2>W11</h2>
 <p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/w11%25E4%25BD%259C%25E6%25A5%25AD.py">考試結果</a></p>
-<p><a href="/get_page/W11/\https:/mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/W11%2520%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p><h2>W12</h2>
+<p><a href="/get_page/W11/\https:/mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/W11%2520%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p>
+<h2>W12</h2>
 <h3>w12-1</h3>
 <!-- 
 在動態網站頁面中啟用 Brython 執行環境的用法, 請注意動態網站執行所在路徑
@@ -440,7 +444,10 @@ if __name__ == '__main__':
 -->
 <h2>W13</h2>
 <p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex1.py">w13溫度轉換ex1</a></p>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex2.py" title="w13溫度轉換ex2">w13溫度轉換ex2</a></p><h1>Brython</h1>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex2.py" title="w13溫度轉換ex2">w13溫度轉換ex2</a></p>
+<h2>w15</h2>
+<h2>w16</h2>
+<h1>Brython</h1>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
 <p style="padding-left: 30px;"><a href="https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d">https://gist.github.com/mdecycu/d9082d678096bd58378d6afe2c7fa05d</a></p>
