--- a/content/W11.html
+++ b/content/W11.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -143,7 +143,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content">W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12<br /><h1>W11</h1>
 <p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/w11%25E4%25BD%259C%25E6%25A5%25AD.py">考試結果</a></p>
-<p><a href="/get_page/W11/\https:/mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/W11%2520%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p><br />W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
+<p><a href="/get_page/W11/\https:/mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/a3c97220077b3f40c559d61bc4da4592/raw/c89e9d313efe5f33bf23bffd1e08741ef9c4734d/W11%2520%25E7%2595%25AB%25E5%259C%2596.py">繪圖</a></p>
+<br />W10 << <a href='W10.html'>Previous</a> <a href='W12.html'>Next</a> >> W12</div>
         
     <!-- footer -->
       <div class="container">
