--- a/content/W13.html
+++ b/content/W13.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12-3 << <a href='w12-3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>W13</h1>
+    <div id="tipue_search_content">w12-3 << <a href='w12-3.html'>Previous</a> <a href='w15.html'>Next</a> >> w15<br /><h1>W13</h1>
 <p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex1.py">w13溫度轉換ex1</a></p>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex2.py" title="w13溫度轉換ex2">w13溫度轉換ex2</a></p><br />w12-3 << <a href='w12-3.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/d8aec452724004f01c820480fb74dd5d/raw/25d3f3012cdc05e5316f0b96628276c24d963b44/w13%25E6%25BA%25AB%25E5%25BA%25A6%25E8%25BD%2589%25E6%258F%259B%25E7%25A8%258B%25E5%25BC%258Fex2.py" title="w13溫度轉換ex2">w13溫度轉換ex2</a></p>
+<br />w12-3 << <a href='w12-3.html'>Previous</a> <a href='w15.html'>Next</a> >> w15</div>
         
     <!-- footer -->
       <div class="container">
