--- a/content/W5.html
+++ b/content/W5.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">HW << <a href='HW.html'>Previous</a> <a href='W6.html'>Next</a> >> W6<br /><h1>W5</h1>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4a6115d8a722d725aff5f5140cb63e6e/raw/a7ac9f34e3444e6096e3d1f8a5a16c09755d4a2b/w5%2520random.py">密碼亂數</a></p><br />HW << <a href='HW.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4a6115d8a722d725aff5f5140cb63e6e/raw/a7ac9f34e3444e6096e3d1f8a5a16c09755d4a2b/w5%2520random.py">密碼亂數</a></p>
+<br />HW << <a href='HW.html'>Previous</a> <a href='W6.html'>Next</a> >> W6</div>
         
     <!-- footer -->
       <div class="container">
