--- a/content/W6.html
+++ b/content/W6.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='cp2022.html'>cp2022</a><li class='has-children'><a href='HW.html'>HW</a><ul class='dropdown'><li><a href='W5.html'>W5</a><li><a href='W6.html'>W6</a><li><a href='W10.html'>W10</a><li><a href='W11.html'>W11</a><li class='has-children'><a href='W12.html'>W12</a><ul class='dropdown'><li><a href='w12-1.html'>w12-1</a><li><a href='w12-2.html'>w12-2</a><li><a href='w12-3.html'>w12-3</a></li></ul><li><a href='W13.html'>W13</a><li><a href='w15.html'>w15</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,7 +142,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">W5 << <a href='W5.html'>Previous</a> <a href='W10.html'>Next</a> >> W10<br /><h1>W6</h1>
-<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?srcc=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/1.py&amp;src2=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/2.py">抽點</a></p><br />W5 << <a href='W5.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/cp2022.html?srcc=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/1.py&amp;src2=https://gist.githubusercontent.com/Zkamsmsmdmdm/8e92f32b96735df8d606cfd891ee8f0f/raw/ddad53e3676d97b7f422329d159dbde1ea5a3bdc/2.py">抽點</a></p>
+<br />W5 << <a href='W5.html'>Previous</a> <a href='W10.html'>Next</a> >> W10</div>
         
     <!-- footer -->
       <div class="container">
