--- a/content/w16.html
+++ b/content/w16.html
@@ -142,6 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w15 << <a href='w15.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w16</h1>
+<p><a href="https://mdecp2022.github.io/site-Zkamsmsmdmdm/content/Brython.html?src=https://gist.githubusercontent.com/Zkamsmsmdmdm/4027288f232770557f6a04ba857dc3a3/raw/fc5e7e0f22a261a9316c6b89b1befac3e0636759/w16.py">綠色方格</a></p>
 <br />w15 << <a href='w15.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
